<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mainFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment">

    <Button
        android:text="View transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_transactions_btn"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"

        />

    <Button
        android:text="Send money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_money_btn"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"


        />

    <Button
        android:text="View balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_balance_btn"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"


        />

</LinearLayout>