...
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:hint="Amount"
                android:id="@+id/input_amount"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

...
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias=".4"
        app:layout_constraintRight_toLeftOf="@+id/cancel_btn"
        android:id="@+id/send_btn"
        android:text="send"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
